--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mp-ecommerce-nodejs",
+  "name": "MercadoLibre-Nodejs",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.17.1",
-    "express-handlebars": "3.1.0"
+    "express-handlebars": "3.1.0",
+    "mercadopago": "^1.5.14"
   }
 }
