--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "4.17.1",
     "express-handlebars": "3.1.0",
-    "mercadopago": "^1.5.14"
+    "mercadopago": "^1.5.14",
+    "open": "^8.4.0"
   }
 }
